<resources>
    <string name="app_name">Interfaces</string>
    <string name="textoemail" translatable="false" />
    <string name="text_example">Text Example</string>
    <string name="password">Password</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="enter_email">enter email</string>
    <string name="register">register</string>
    <string name="Enter_email">Enter_email</string>
    <string name="Continue">continue</string>
    <string name="name">Name</string>
    <string name="Lastname">Name</string>
    <string name="last_name">Last name</string>
    <string name="Name">Name</string>
    <string name="date_born">Date Born</string>
    <string name="age">Age</string>
    <string name="textview">TextView</string>
    <string name="radiobutton">RadioButton</string>
    <string name="radiobutton2">RadioButton</string>
    <string name="radiobutton3">RadioButton</string>
    <string name="casado">casado</string>
    <string name="soltero">soltero</string>
    <string name="union_libre">union libre</string>
    <string name="enter_email2">Enter email</string>
    <string name="textview2">TextView</string>
    <string name="password2">Password</string>
    <string name="confirm_password">confirm Password</string>
    <string name="button3">Button</string>
    <string name="Return">return</string>
    <string name="Textview">TextView</string>
    <string name="Estado_civil">Estado civil</string>
    <string name="producto">Producto</string>
    <string name="subtotal">Subtotal</string>
    <string name="usuario">Usuario</string>
    <string name="juan_diego_acosta">Juan Diego Acosta</string>
    <string name="correo_electronico">Correo electronico</string>
    <string name="jdacostac_libertadores_edu_co">jdacostac@libertadores.edu.co</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="_28_07_2001">28/07/2001</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="estudiante">Estudiante</string>
    <string name="Usuario">Usuario</string>
    <string name="Datos_del_usuario">Datos del usuario</string>
    <string name="Usuario2">Usuario</string>
    <string name="datos_del_usuario">Datos del usuario</string>
    <string name="Soltero">Soltero</string>
    <string name="edad_20_a_os">Edad: 20 años</string>
    <string name="Estado_civil2">Estado civil</string>
    <string name="todo">TODO</string>
    <string name="button4">Button</string>
    <string name="Llamada">TextView</string>
    <string name="Todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="checkbox">CheckBox</string>
    <string name="textview5">TextView</string>
    <string name="responder">Responder</string>
    <string name="textview6">TextView</string>
    <string name="grande">Grande</string>
    <string name="mediano">Mediano</string>
    <string name="peque_o">Pequeño</string>
    <string name="Final">Button</string>
    <string name="button6">Button</string>
    <string name="contrase_a">Contraseña</string>
    <array name="Sexo">
        <item name="Sexo">Sexo</item>
        <item name="hombre">Hombre</item>
        <item name="mujer">mujer</item>
    </array>
</resources>